@@ -1,5 +1,5 @@
 # Expect script for ld-gc tests
-#   Copyright 2008, 2009, 2010, 2012
+#   Copyright 2008, 2009, 2010
 #   Free Software Foundation, Inc.
 #
 # This file is part of the GNU Binutils.
@@ -30,11 +30,6 @@ set objfile "tmpdir/gc.o"
 if [istarget powerpc64*-*-*] {
     # otherwise with -mcmodel=medium gcc we get XPASSes.
     set cflags "$cflags -mminimal-toc"
-}
-
-if { [istarget m681*-*-*] || [istarget m68hc1*-*-*] } {
-    # Otherwise tests FAIL due to _.frame
-    set cflags "$cflags -fomit-frame-pointer -mshort"
 }
 
 if { [is_remote host] || [which $CC] != 0 } {
@@ -102,37 +97,11 @@ test_gc "Check --gc-section/-r/-u" "gcrel" $ld "-r --gc-sections -u used_func"
 run_dump_test "noent"
 run_dump_test "abi-note"
 run_dump_test "start"
-
-if { [is_elf_format] && [check_shared_lib_support] } then {
-    set gasopt ""
-    if { [istarget tic6x-*] } then {
-	set gasopt "-mpic -mpid=near"
-    }
-    if {![ld_assemble_flags $as $gasopt $srcdir/$subdir/libpersonality.s tmpdir/libpersonality.o]
-	|| ![ld_simple_link $ld tmpdir/libpersonality.so "-shared tmpdir/libpersonality.o"] } then {
-	fail libpersonality
-    } else {
-	run_dump_test "personality"
-    }
-}
-
 if { [is_remote host] || [which $CC] != 0 } {
-    if { [istarget "*-*-linux*"]
-	 || [istarget "*-*-nacl*"]
-	 || [istarget "*-*-gnu*"] } {
+    if { [istarget "*-*-linux*"] } {
 	ld_compile "$CC -fPIC $CFLAGS $cflags" $srcdir/$subdir/pr11218-1.c tmpdir/pr11218-1.o
 	ld_simple_link $ld tmpdir/pr11218-1.so "-shared tmpdir/pr11218-1.o"
  	ld_compile "$CC -c $CFLAGS $cflags" $srcdir/$subdir/pr11218-2.c tmpdir/pr11218-2.o
 	run_dump_test "pr11218"
     }
-}
-
-if { [is_remote host] || [which $CC] != 0 } {
-	ld_compile "$CC $CFLAGS $cflags" $srcdir/$subdir/pr13683.c tmpdir/pr13683.o
-	run_dump_test "pr13683"
-}
-
-if { [is_remote host] || [which $CC] != 0 } {
-    ld_compile "$CC $CFLAGS $cflags" $srcdir/$subdir/pr14265.c tmpdir/pr14265.o
-    run_dump_test "pr14265"
 }
